	supported so far: iso, cue, cdrdao toc, cdrecord clone images
better systemconfigcheck messages when cdrecord is not running with root privs
proper automatic writing mode and writing app selection for non-DAO-capable writers
overwriting of files in a new session
default CD size is now 80 min
generic resampling for all audio plugins
FLAC decoding plugin (thanks to John Steele Scott)
	
0.10
DVD writing support with the DVD+RW-tools by Andy Polyakov <appro@fy.chalmers.se>
DVD formatting
DVD Copy (pure data dvd copy without any video transcoding)
CD Cloning with cdrtools >= 2.01a17
device capabilities detection without cdrecord. This solves the long startup problem with ATAPI devices.
moved audio ripping pattern configuration from options dialog to audio ripping dialog
option to automatically erase CD-RWs and DVD-RWs without asking before writing
dragging files from a data project to the audio player (basically it's just a KURLDrag so it may be dragged
	everywhere)
K3b is now divided in three libs and the main application: libk3bcore, libk3btools, and libk3bproject
	this makes creating KParts-plugins easy. Two examples can be found in the tests/kpartplugins dir
	one of them is a former K3b option which allowed to use audio meta data to rename files while
	adding them to a data project. Now this is done by a plugin and a much higher degree of user 
	interaction.
Iso9660 file sorting (mkisofs -sort)
libid3 support for better mp3 tag access (we had that in some very old version but back then
	K3b depended on it. Now it defaults to using KFileMetaInfo if it's not available)
Pluggable audio decoding
Pluggable audio encoding and completely rewritten audio ripping
	much faster now due to a much better threading
Check for read permission when adding files to a project
file filter in binimagewritingdialog and isoimagewritingdialog (thanx to David Maciejak)
Verification of written data (compares md5 sums of all written files).